--- a/blogs.html
+++ b/blogs.html
@@ -14,9 +14,9 @@
 
     <div class="container">
         <ul>
-            <li><a href="posts/golden-days.html">The Golden Days of Blogging</a></li>
-            <li><a href="posts/why-nostalgia-works.html">Why Nostalgia Works</a></li>
-            <!-- Add new posts as links here -->
+            <li><a href="posts/Oil and pandemic - thoughts about economic cycles.html">Oil and pandemic - thoughts about economic cycles</a></li>
+            <li><a href="posts/Pfizer vaccines - destined to succeed.html">Pfizer vaccines - destined to succeed</a></li>
+            <li><a href="posts/Mitsubishi Heavy Industries.html">Mitsubishi Heavy Industries - my failed success</a></li>
         </ul>
     </div>
 
