--- a/blogs.html
+++ b/blogs.html
@@ -14,9 +14,9 @@
 
     <div class="container">
         <ul>
-            <li><a href="posts/Oil and pandemic - thoughts about economic cycles.html">Oil and pandemic - thoughts about economic cycles</a></li>
-            <li><a href="posts/Pfizer vaccines - destined to succeed.html">Pfizer vaccines - destined to succeed</a></li>
-            <li><a href="posts/Mitsubishi Heavy Industries.html">Mitsubishi Heavy Industries - my failed success</a></li>
+            <li><a href="posts/post1.html">Oil and pandemic - thoughts about economic cycles</a></li>
+            <li><a href="posts/post2.html">Pfizer vaccines - destined to succeed</a></li>
+            <li><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></li>
         </ul>
     </div>
 
