--- a/about.html
+++ b/about.html
@@ -13,12 +13,7 @@
     </header>
     <div class="container">
         <p>
-            Welcome to my blog! My name is [Your Name], and I am passionate about [Your Passion or Niche]. 
-            This blog is a place where I share my thoughts, stories, and ideas about [Your Topics of Interest].
-        </p>
-        <p>
-            I started this blog to [Your Purpose for the Blog, e.g., "connect with like-minded individuals"]. 
-            When I'm not writing, I enjoy [Your Hobbies or Activities]. Thank you for visiting, and I hope you find something that resonates with you!
+            I'm Shindoz and this is my blog about money. 
         </p>
     </div>
 
