--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <div class="container">
         <p>If you’d like to get in touch, feel free to reach out via email or social media. I’d love to hear from you!</p>
 
-        <form action="https://formspree.io/f/[your-email-address]" method="POST">
+        <form action="https://formspree.io/f/[shindoz9502@gmail.com]" method="POST">
             <label for="name">Name:</label><br>
             <input type="text" id="name" name="name" required><br><br>
 
