--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
         <h1>Contact Me</h1>
     </header>
     <div class="container">
-        <p>If you’d like to get in touch, feel free to reach out via email or social media. I’d love to hear from you!</p>
+        <p>If you’d like to get in touch, feel free to reach out via email. I’d love to hear from you!</p>
 
         <form action="https://formspree.io/f/[shindoz9502@gmail.com]" method="POST">
             <label for="name">Name:</label><br>
