--- a/blogs.html
+++ b/blogs.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="posts/post1.html">Oil and pandemic - thoughts about economic cycles</a></li>
             <li><a href="posts/post2.html">Pfizer vaccines - destined to succeed</a></li>
-            <li><a href="posts/post3.html">Mitsubishi Heavy industries - my failed success</a></li>
+            <li><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></li>
             <li><a href="posts/post4.html">CD Projekt Red - is this my next mitsubishi heavy</a></li>
             <li><a href="posts/post5.html">Crypto - my shady policital views</a></li>
         </ul>
