--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Blogs</h1>
-        <p>Explore all my blog posts</p>
+        <p>Something about money</p>
     </header>
 
     <div class="container">
