--- a/blogs.html
+++ b/blogs.html
@@ -12,6 +12,15 @@
         <p>Something about money</p>
     </header>
 
+    <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="blogs.html">Blogs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    </nav>
+
     <div class="container">
         <ul>
             <li><a href="posts/post1.html">Oil and pandemic - thoughts about economic cycles</a></li>
