--- a/about.html
+++ b/about.html
@@ -11,6 +11,16 @@
     <header>
         <h1>About Me</h1>
     </header>
+
+    <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="blogs.html">Blogs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    </nav>
+    
     <div class="container">
         <p>
             I'm Shindoz and this is my blog about money. 
