--- a/blogs.html
+++ b/blogs.html
@@ -27,7 +27,7 @@
             <li><a href="posts/post2.html">Pfizer vaccines - destined to succeed</a></li>
             <li><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></li>
             <li><a href="posts/post4.html">CD Projekt Red - is this my next mitsubishi heavy</a></li>
-            <li><a href="posts/post5.html">Crypto - my shady policital views</a></li>
+            <li><a href="posts/post5.html">Crypto - my shady policital views (updated)</a></li>
         </ul>
     </div>
 
