--- a/blogs.html
+++ b/blogs.html
@@ -22,14 +22,43 @@
     </nav>
 
     <div class="container">
-        <ul>
-            <li><a href="posts/post1.html">Oil and pandemic - thoughts about economic cycles</a></li>
-            <li><a href="posts/post2.html">Pfizer vaccines - destined to succeed</a></li>
-            <li><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></li>
-            <li><a href="posts/post4.html">CD Projekt Red - is this my next mitsubishi heavy</a></li>
-            <li><a href="posts/post5.html">Crypto - my shady policital views (updated)</a></li>
-        </ul>
+    <div class="blog-catalog">
+        <!-- Blog Post 1 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post1.html">Oil and pandemic - thoughts about economic cycles</a></h2>
+            <p class="blog-meta">Published: Date</p>
+            <p>Exploring how global economic cycles are shaped by pandemics and fluctuating oil prices... <a href="posts/post1.html">Read more</a></p>
+        </div>
+
+        <!-- Blog Post 2 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post2.html">Pfizer vaccines - destined to succeed</a></h2>
+            <p class="blog-meta">Published: Date</p>
+            <p>An analysis of Pfizer's groundbreaking vaccine and its role in reshaping global healthcare... <a href="posts/post2.html">Read more</a></p>
+        </div>
+
+        <!-- Blog Post 3 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></h2>
+            <p class="blog-meta">Published: Date</p>
+            <p>Reflections on my investment journey with Mitsubishi Heavy Industries and lessons learned... <a href="posts/post3.html">Read more</a></p>
+        </div>
+
+        <!-- Blog Post 4 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post4.html">CD Projekt Red - is this my next Mitsubishi Heavy?</a></h2>
+            <p class="blog-meta">Published: Date</p>
+            <p>Evaluating CD Projekt Red's trajectory and its potential parallels to previous investments... <a href="posts/post4.html">Read more</a></p>
+        </div>
+
+        <!-- Blog Post 5 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post5.html">Crypto - my shady political views (updated)</a></h2>
+            <p class="blog-meta">Published: December 14, 2024</p>
+            <p>I asked ChatGPT to generate a diaglog where Sollozzo pitches Bitcoin to Don Corleone... <a href="posts/post5.html">Read more</a></p>
+        </div>
     </div>
+</div>
 
     <footer>
         <p>&copy; 2024 My Nostalgic Blog. All rights reserved.</p>
