--- a/blogs.html
+++ b/blogs.html
@@ -47,14 +47,14 @@
         <!-- Blog Post 4 -->
         <div class="blog-preview">
             <h2><a href="posts/post4.html">CD Projekt Red - is this my next Mitsubishi Heavy?</a></h2>
-            <p class="blog-meta">Published: Date</p>
-            <p>Evaluating CD Projekt Red's trajectory and its potential parallels to previous investments... <a href="posts/post4.html">Read more</a></p>
+            <p class="blog-meta">Published: December 14, 2024</p>
+            <p>The entire thought process started in mid 2023 when I was looking at 10-Q of mag 7... <a href="posts/post4.html">Read more</a></p>
         </div>
 
         <!-- Blog Post 5 -->
         <div class="blog-preview">
             <h2><a href="posts/post5.html">Crypto - my shady political views (updated)</a></h2>
-            <p class="blog-meta">Published: December 14, 2024</p>
+            <p class="blog-meta">Published: December 13, 2024</p>
             <p>I asked ChatGPT to generate a diaglog where Sollozzo pitches Bitcoin to Don Corleone... <a href="posts/post5.html">Read more</a></p>
         </div>
     </div>
