--- a/blogs.html
+++ b/blogs.html
@@ -53,7 +53,7 @@
 
         <!-- Blog Post 5 -->
         <div class="blog-preview">
-            <h2><a href="posts/post5.html">Crypto - my shady political views (updated)</a></h2>
+            <h2><a href="posts/post5.html">Crypto - my shady political views</a></h2>
             <p class="blog-meta">Published: December 13, 2024</p>
             <p>I asked ChatGPT to generate a diaglog where Sollozzo pitches Bitcoin to Don Corleone... <a href="posts/post5.html">Read more</a></p>
         </div>
