--- a/blogs.html
+++ b/blogs.html
@@ -61,7 +61,7 @@
 </div>
 
     <footer>
-        <p>&copy; 2024 My Nostalgic Blog. All rights reserved.</p>
+        <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
 </body>
 </html>
