--- a/about.html
+++ b/about.html
@@ -28,5 +28,5 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 My Nostalgic Blog. All rights reserved.</p>
+        <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
