--- a/blogs.html
+++ b/blogs.html
@@ -57,6 +57,13 @@
             <p class="blog-meta">Published: December 14, 2024</p>
             <p>I asked ChatGPT to generate a diaglog where Sollozzo pitches Bitcoin to Don Corleone... <a href="posts/post5.html">Read more</a></p>
         </div>
+
+        <!-- Blog Post 6 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post6.html">CD Projekt Red launched a mediocre trailer of Witcher 4 - what now?</a></h2>
+            <p class="blog-meta">Published: December 14, 2024</p>
+            <p>CD Projekt Red hath unveiled the first spectacle for "The Witcher 4," wherein Ciri, the fostered daughter of Geralt of Rivia, taketh the mantle of lead protagonist... <a href="posts/post6.html">Read more</a></p>
+        </div>
     </div>
 </div>
 
