--- a/main.html
+++ b/main.html
@@ -37,5 +37,8 @@
     <footer>
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
+    <audio loop autoplay>
+    <source src="https://downloads.khinsider.com/game-soundtracks/album/the-witcher-3-wild-hunt-blood-wine/09.%2520The%2520Musty%2520Scent%2520Of%2520Fresh%2520P%25C3%25A2t%25C3%25A9.mp3" type="audio/mpeg">
+    </audio>
 </body>
 </html>
