--- a/blogs.html
+++ b/blogs.html
@@ -41,7 +41,7 @@
         <div class="blog-preview">
             <h2><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></h2>
             <p class="blog-meta">Published: Date</p>
-            <p>Reflections on my investment journey with Mitsubishi Heavy Industries and lessons learned... <a href="posts/post3.html">Read more</a></p>
+            <p>Pandemic was an extreme event for the entire markets. Stocks became cheap for quite some time... <a href="posts/post3.html">Read more</a></p>
         </div>
 
         <!-- Blog Post 4 -->
@@ -71,5 +71,8 @@
     <footer>
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
+    <audio loop autoplay>
+    <source src="https://downloads.khinsider.com/game-soundtracks/album/the-witcher-3-wild-hunt-the-complete-soundtrack/166%2520Cirilla%2520Fiona%2520Elen%2520Riannon.mp3" type="audio/mpeg">
+    </audio>
 </body>
 </html>
