--- a/blogs.html
+++ b/blogs.html
@@ -65,6 +65,13 @@
             <p>CD Projekt Red hath unveiled the first spectacle for "The Witcher 4," wherein Ciri, the fostered daughter of Geralt of Rivia, taketh the mantle of lead protagonist... <a href="posts/post6.html">Read more</a></p>
         </div>
 
+        <!-- Blog Post 7 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post7.html">AI is real and it's coming - bend your knees</a></h2>
+            <p class="blog-meta">Published: December 25, 2024</p>
+            <p>Saw this video, which turns Witcher game into fractions of 1980s movie scenes... <a href="posts/post7.html">Read more</a></p>
+        </div>
+
     </div>
 </div>
 
