--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
         <!-- Blog Post 3 -->
         <div class="blog-preview">
             <h2><a href="posts/post3.html">Mitsubishi Heavy Industries - my failed success</a></h2>
-            <p class="blog-meta">Published: Date</p>
+            <p class="blog-meta">Published: December 26, 2024</p>
             <p>Pandemic was an extreme event for the entire markets. Stocks became cheap for quite some time... <a href="posts/post3.html">Read more</a></p>
         </div>
 
