--- a/blogs.html
+++ b/blogs.html
@@ -79,7 +79,7 @@
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
     <audio loop autoplay>
-    <source src="https://downloads.khinsider.com/game-soundtracks/album/the-witcher-3-wild-hunt-the-complete-soundtrack/227%2520Searching%2520for%2520Cecilia%2520Bellant.mp3" type="audio/mpeg">
+    <source src="https://kappa.vgmsite.com/soundtracks/the-witcher-3-wild-hunt-the-complete-soundtrack/vgmjvfyics/227%20Searching%20for%20Cecilia%20Bellant.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
