--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
     <audio loop autoplay>
-    <source src="https://downloads.khinsider.com/game-soundtracks/album/the-witcher-3-wild-hunt-blood-wine/09.%2520The%2520Musty%2520Scent%2520Of%2520Fresh%2520P%25C3%25A2t%25C3%25A9.mp3" type="audio/mpeg">
+    <source src="https://vgmsite.com/soundtracks/the-witcher-3-wild-hunt-blood-wine/geenzyiq/09.%20The%20Musty%20Scent%20Of%20Fresh%20P%C3%A2t%C3%A9.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
