--- a/blogs.html
+++ b/blogs.html
@@ -79,7 +79,7 @@
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
     <audio loop autoplay>
-    <source src="https://kappa.vgmsite.com/soundtracks/the-witcher-3-wild-hunt-the-complete-soundtrack/vgmjvfyics/227%20Searching%20for%20Cecilia%20Bellant.mp3" type="audio/mpeg">
+    <source src="https://vgmsite.com/soundtracks/the-witcher-3-wild-hunt-extended-edition/qidwnxsy/41.%20A%C2%A0Story%C2%A0You%C2%A0Won%27t%C2%A0Believe.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
