--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Something About Money</h1>
-        <p>Blending the charm of the investing with a nerdy twist</p>
+        <p>I'm gonna buy the dip for the 100th time and look like a genius!</p>
     </header>
 
     <nav>
