--- a/blogs.html
+++ b/blogs.html
@@ -32,9 +32,9 @@
 
         <!-- Blog Post 2 -->
         <div class="blog-preview">
-            <h2><a href="posts/post2.html">Pfizer vaccines - destined to succeed</a></h2>
-            <p class="blog-meta">Published: Date</p>
-            <p>An analysis of Pfizer's groundbreaking vaccine and its role in reshaping global healthcare... <a href="posts/post2.html">Read more</a></p>
+            <h2><a href="posts/post2.html">Short squeeze - a new era, and new business model for online scammers</a></h2>
+            <p class="blog-meta">Published: January 4, 2025</p>
+            <p>You might have seen me roasting a short seller called John Hempton in my another post. Well, he's not that bad if you check his fund returns... <a href="posts/post2.html">Read more</a></p>
         </div>
 
         <!-- Blog Post 3 -->
