--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,47 @@
-    <header>
-        <h1>Contact Me</h1>
-    </header>
-    <div class="container">
-        <p>If you’d like to get in touch, feel free to reach out via email. I’d love to hear from you!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact Me</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-        <form action="https://formspree.io/f/[shindoz9502@gmail.com]" method="POST">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
+    .contact-box {
+      background: white;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+    h2 {
+      margin-bottom: 20px;
+    }
 
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="5" required></textarea><br><br>
+    a.email-link {
+      font-size: 18px;
+      color: #007BFF;
+      text-decoration: none;
+    }
 
-            <button type="submit">Send</button>
-        </form>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 My Money Blog. All rights reserved.</p>
-    </footer>
+    a.email-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <div class="contact-box">
+    <h2>Contact Me</h2>
+    <p>Feel free to reach out via email:</p>
+    <p><a class="email-link" href="mailto:shindoz9502@gmail.com">shindoz9502@gmail.com</a></p>
+  </div>
 </body>
 </html>
+
