--- a/blogs.html
+++ b/blogs.html
@@ -72,6 +72,13 @@
             <p>Saw this video, which turns Witcher game into fractions of 1980s movie scenes... <a href="posts/post7.html">Read more</a></p>
         </div>
 
+        <!-- Blog Post 8 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post8.html">Diary of Dip Buying</a></h2>
+            <p class="blog-meta">Published: January 15, 2024</p>
+            <p>I'm buying this dip again... <a href="posts/post8.html">Read more</a></p>
+        </div>
+
     </div>
 </div>
 
