--- a/main.html
+++ b/main.html
@@ -33,14 +33,14 @@
             <p>Would love to turn textbook knowledge into real money. The secret ingredient is time.</p>
             <div class="video-container">
     <iframe 
-        width="560" 
-        height="315" 
-        src="https://www.youtube.com/watch?v=5lcXIewg0WI" 
-        title="Gaunter O'Dimm and Gingerbread" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/5lcXIewg0WI" 
+    title="Gaunter O'Dimm and Gingerbread" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen>
+</iframe>
 </div>
         </div>
     </div>
