--- a/blogs.html
+++ b/blogs.html
@@ -79,6 +79,12 @@
             <p>I'm buying this dip again... <a href="posts/post8.html">Read more</a></p>
         </div>
 
+        <!-- Blog Post 9 -->
+        <div class="blog-preview">
+            <h2><a href="posts/post9.html">Liquidity Supercycle</a></h2>
+            <p class="blog-meta">Published: September 26, 2025</p>
+            <p>... <a href="posts/post9.html">Read more</a></p>
+        </div>
     </div>
 </div>
 
