--- a/blogs.html
+++ b/blogs.html
@@ -92,7 +92,7 @@
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
     <audio loop autoplay>
-    <source src="https://vgmsite.com/soundtracks/the-witcher-3-wild-hunt-extended-edition/fcscxmkl/41.%20A%C2%A0Story%C2%A0You%C2%A0Won%27t%C2%A0Believe.mp3" type="audio/mpeg">
+    <source src="https://vgmtreasurechest.com/soundtracks/the-witcher-3-wild-hunt-the-complete-soundtrack/kraeujnk/001%20The%20White%20Wolf.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
