--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
         <p>&copy; 2024 My Money Blog. All rights reserved.</p>
     </footer>
     <audio loop autoplay>
-    <source src="https://downloads.khinsider.com/game-soundtracks/album/the-witcher-3-wild-hunt-the-complete-soundtrack/002%2520The%2520Trail.mp3" type="audio/mpeg">
+    <source src="https://vgmtreasurechest.com/soundtracks/the-witcher-3-wild-hunt-the-complete-soundtrack/nlrbhglj/002%20The%20Trail.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
